LIST OF CHANGES FOR NPG-QC PACKAGE

release 69.5.0
 - measures to speed-up generation of SeqQC pages:
   - add a prefetch for compositions and components when retrieving autoqc
     results from a database;
   - use in-line custom sort function instead of a closure for ref_match
     result objects  
   - disable a check for circular references in serialization of autoqc
     result objects

release 69.4.0
 - mqc skipper not to consider runs tagged 'no_auto' or 'no_mqc_skipper'

release 69.3.0
 - mqc skipper - following a change in RoboQC creteria for real samples
   (artic QC pass requirement is dropped), add a threshold for the number
   of artic fails
 - add option to restrict to a single gbs_plex to genotype_call_results_reporter  

release 69.2.0
 - the mqc skipper script is changed to always take into account the outcome
   of RoboQC assessment
 - improvements for SeqQC display of the generic results for artic data

release 69.1.0
 - an extension for the npg_mqc_skipper script to make it work for the
   Heron study, ie to take into consideration provisional manual QC
   outcomes from the review autoqc resuls and finalise QC outcomes
   for sequencing and libraries for runs that are expedited to archival

release 69.0.1
 - npg_qc::autoqc::checks::generic::artic - bug fix in a parser for
   artic QC summary for cases when the summary is empty

release 69.0.0
 - npg_qc::autoqc::checks::generic::artic - a proper autoqc check class,
   which repleces bin/npg_autoqc_generic4artic script
 - make pp_name attribute required for the generic check object
 - custom scripts for robo qc and autoqc for outputs of the artic pipeline
   (npg_autoqc_generic4artic and npg_simple_robo4artic) are removed
 - npg_qc::autoqc::checks::review
   - breaking change of the RoboQC section of the product configuration file
   - introduction of the applicability criteria to allow for conditions that
     are based on different LIMS properties

release 68.9